[package]
name = "cache-rs"
description = "A Rust implementation of the NICOS cache"
version = "1.0.5"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
log = "0.4.8"
time = "0.1"
libc = "0.2.66"
mlzlog = "0.7.0"
regex = "1.3.3"
memchr = "2.3.0"
mlzutil = "0.2.0"
structopt = "0.3.7"
once_cell = "1.3.0"
hashbrown = "0.9.0"
aho-corasick = "0.7.6"
signal-hook = "0.3.4"
parking_lot = "0.11.0"
daemonize = "0.4.1"
crossbeam-channel = "0.5.0"
postgres = { version = "0.19.0", optional = true }
