[package]
name = "cache-rs"
description = "A Rust implementation of the NICOS cache"
version = "1.0.5"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
log = "0.4.8"
time = { version = "0.3", features = ["local-offset"] }
libc = "0.2.146"
mlzlog = "0.8.1"
regex = "1.8.4"
memchr = "2.3.0"
mlzutil = "0.3.0"
structopt = "0.3.7"
once_cell = "1.18.0"
hashbrown = "0.13.0"
aho-corasick = "1.0.2"
signal-hook = "0.3.15"
parking_lot = "0.12.1"
daemonize = "0.5.0"
crossbeam-channel = "0.5.8"
postgres = { version = "0.19.5", optional = true }
