[package]
name = "cache-rs"
description = "A Rust implementation of the NICOS cache"
version = "1.0.5"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
rust-version = "1.63"
edition = "2021"

[profile.release]
lto = true

[dependencies]
log = "0.4.20"
libc = "0.2.153"
mlzlog = "0.8.1"
chrono = "0.4.38"
regex = "<1.10.0"
memchr = "2.7.1"
mlzutil = "0.4.0"
once_cell = "1.19.0"
hashbrown = "0.13.0"
aho-corasick = "1.1.2"
signal-hook = "0.3.17"
parking_lot = "0.12.1"
daemonize = "0.5.0"
crossbeam-channel = "0.5.11"
clap = { version = "3.0", features = ["derive", "cargo"] }
postgres = { version = "0.19.7", optional = true }
